# htc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  tsc.cabal
demo/: main.hts  main.ts
src-exe/: AST.hs  Main.hs  Parser.hs  TypeChecker.hs
