cabal-version:      3.0
name:               tsc
version:            0.1.0.0

executable tsc
    main-is:          Main.hs
    other-modules:    AST, Parser, TypeChecker
    hs-source-dirs:   src-exe
    build-depends:    base >= 4.14 && < 5,
                      directory,
                      filepath
    default-language: Haskell2010
