cabal-version:      3.0
name:               htc
version:            0.1.1.0

executable tsc
    main-is:          Main.hs
    other-modules:    AST, Parser, TypeChecker
    hs-source-dirs:   src-exe
    build-depends:    base >= 4.14 && < 5,
                      directory,
                      filepath
    ghc-options:      -O2
    default-language: Haskell2010
